--- a/.github/workflows/ca3.yml
+++ b/.github/workflows/ca3.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "i200517" ]
   pull_request:
     branches: [ "main" ]
 
