--- a/MakeFile
+++ b/MakeFile
@@ -1,6 +1,6 @@
 install:
-pip install --upgrade pip&\
-pip install -r requirements.txt
+    pip install --upgrade pip && pip install -r requirements.txt
+
 
 lint:
 pylint --disable=C,R mul.pylint
